Fixed markup errors and aligned styling in various HTML files. Added templating fields to campaigns.html.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -29,6 +29,10 @@ a:visited {
     color: rebeccapurple;
 }
 
+.text-muted {
+    color: black;
+}
+
 .streets-assigned {
     color: black;
     font-size: 18px;
@@ -57,7 +61,7 @@ a:visited {
 
 .btn-custom {
     color: white;
-    background-color: rebeccapurple;
+    background-color: rebeccapurple; */
     border-color: rebeccapurple;
     display: inline-block;
 }
@@ -167,6 +171,13 @@ a:visited {
     width: auto;
     height: 200px;
     margin: 0 auto;
+}
+
+.organisation-summary {
+    color: black;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 24px;
 }
 
 .product-name, .product-price, .product-pitch,
